functionalities, validations,excep handling done,security both front and back end - done!
All functionalities - done.
Front-End validations - done.
Back-End validations - done.
Exception handling,custom exceptions - done
Security on web side from both front-end and back-end - done